# cargo-packaging

./: .gitignore  Cargo.toml  README.md  build.rs  macros.cargo  rust.attr
src/: cli_opt.rs  main.rs  rpmprovides.rs
